<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="service_name">HitecTelemetry</string>
    <string name="app_name">HitecTelemetry</string>
    <string name="alert_dialog_no_bt">cannot use this application without bluetooth.</string>
    <string name="alert_dialog_yes">yes</string>
    <string name="alert_dialog_no">no</string>
    <string name="alert_dialog_warning_title">warning</string>
    <string name="alert_dialog_ok">ok</string>
    <string name="alert_dialog_turn_on_bt">this application needs the bluetooth. do you want turn on?</string>
    <string name="not_connected">you are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">no devices have been paired</string>
    <string name="none_found">no devices found</string>
    <string name="title_paired_devices">paired Devices</string>
    <string name="title_other_devices">other available devices</string>
    <string name="button_scan">scan for devices</string>
    <string name="connect">connect device</string>
    <string name="disconnect">disconnect device</string>
    <string name="preferences">preferences</string>
    <string name="special_keys">special keys</string>
    <string name="general_preferences">general</string>
    <string name="title_localhecho_preference">local echo</string>
    <string name="summary_localecho_preference">display the key strokes</string>
    <string name="text_preferences">text</string>
    <string name="title_fontsize_preference">font size</string>
    <string name="summary_fontsize_preference">choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">font size</string>
    <string name="title_color_preference">colors</string>
    <string name="summary_color_preference">choose text color.</string>
    <string name="dialog_title_color_preference">text color</string>
    <string name="keyboard_preferences">keyboard</string>
    <string name="title_controlkey_preference">control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="title_document_key_press">Press</string>
    <string name="title_document_key_rest">and Key</string>
    <string name="default_value_localecho_preference">false</string>
    <string name="default_value_fontsize_preference">10</string>
    <string name="default_value_color_preference">2</string>
    <string name="default_value_controlkey_preference">0</string>
    <string name="start_string">Hitec Telemetry Interface 1.09</string>
    <string name="start_copyright">© 2013, 2014 Ralf Rosche</string>
    <string name="alarm">alert threshold</string>
    <string name="volage">voltage</string>
    <string name="current">current</string>
    <string name="temperature">temperature</string>
    <string name="altitude">altitude</string>
    <string name="speed">speed</string>
    <string name="general">gereral settings</string>
    <string name="alarms_on">alarms On</string>
    <string name="version">version information</string>
    <string name="fuel">fuel</string>
    <string name="power">power</string>
    <string name="rpm">rpm</string>
    <string name="sound">sound on</string>
    <string name="sound_file">sound file</string>
    <string name="bluetooth_device">bluetooth device</string>
    <string name="default_device">HITECAURORA</string>
    <string name="alarm_voltage">voltage</string>
    <string name="alarm_current">current</string>
    <string name="graph">graphs</string>
    <string name="sensor_settings">sensor settings</string>
    <string name="labels">labels</string>
    <string name="single_alarms">single alerts</string>
    <string name="hysteresis">hysteresis</string>
    <string name="log_file">log file name</string>
    <string name="threshold">threshold</string>
    <string name="defaultLogFile">spectra_log.log</string>
    <string name="default_log_file">spectra_log.log</string>
    <string name="raw_log_file">log file raw data</string>
    <string name="logging_on">logging enabled</string>
    <string name="voltage_hysteresis">voltage</string>
    <string name="label_temp1">temp1</string>
    <string name="current_sensor_type">current sensor type</string>
    <string name="default_sensor_type">C200</string>
    <string name="label_rpm1">rpm1</string>
    <string name="label_rpm2">rpm2</string>
    <string name="label_temp2">temp2</string>
    <string name="units">units</string>
    <string name="unit_rpm1">rpm1</string>
    <string name="unit_rpm2">rpm2</string>
    <string name="unit_temp1">temp1</string>
    <string name="unit_temp2">temp2</string>
    <string name="current_hysteresis">current</string>
    <string name="rpm_hysteresis">rpm</string>
    <string name="temperature_hysteresis">temperature</string>
    <string name="alarm_speed">speed</string>
    <string name="alarm_fuel">fuel</string>
    <string name="alarm_temperature">temperature</string>
    <string name="alarm_rpm">rpm1/2</string>
    <string name="alarm_altitude">altitude</string>
    <string name="alarm_power">power</string>
    <string name="power_hysteresis">power</string>
    <string name="used_cap">used capacity</string>
    <string name="log_on">begin logging</string>
    <string name="log_off">stop logging</string>
    <string name="defaultValue0">0</string>
    <string name="defaultValue00">0</string>
    <string name="defaultValue30">30</string>
    <string name="defaultValue100">100</string>
    <string name="defaultValue300">300</string>
    <string name="defaultValue3000">3000</string>
    <string name="defaultValue1000">1000</string>
    <string name="defaultValue10000">10000</string>
    <string name="defaultValue10">10</string>
    <string name="defaultValue50">50</string>
    <string name="dataexplorer">data explorer</string>
</resources>