<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="speak_alarms"
        android:title="speak alarms" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_voltage"
            android:title="@string/alarm_voltage" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_current"
            android:title="@string/alarm_current" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_speed"
            android:title="@string/alarm_speed" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_fuel"
            android:title="@string/alarm_fuel" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_temperature"
            android:title="@string/alarm_temperature" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_altitude"
            android:title="@string/alarm_altitude" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_rpm"
            android:title="@string/alarm_rpm" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_power"
            android:title="@string/alarm_power" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speak_used"
            android:title="@string/used_cap" />

</PreferenceScreen>
